--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -65,7 +65,7 @@ bind l select-pane -R
 bind M-h swap-window -t -1
 bind M-l swap-window -t +1
 bind r source-file ~/.tmux.conf
-bind -n C-k send-keys C-l \; run-shell "sleep .3s" \; clear-history
+bind M-k send-keys C-l \; run-shell "sleep .3s" \; clear-history
 
 # Copy to OSX clipboard
 bind-key y run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
