move between panes like vim

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -56,16 +56,20 @@ bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 #
 
-# Move around panes vim style
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+ # move between panes
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
 bind M-h swap-window -t -1
 bind M-l swap-window -t +1
 bind r source-file ~/.tmux.conf
 bind M-k send-keys C-l \; run-shell "sleep .3s" \; clear-history
+
+bind v split-window -h
+bind s split-window -v 
+bind S choose-session
 
 # Copy to OSX clipboard
 bind-key y run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
