Add fugitive as vim plugin

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -8,7 +8,7 @@ bind-key L last-window
 
 set -g base-index 1
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "zsh"
 
 # Make mouse useful in copy mode
 setw -g mode-mouse on
@@ -53,7 +53,7 @@ set-window-option -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe "xclip -i"
 #
 
  # move between panes
@@ -72,4 +72,5 @@ bind s split-window -v
 bind S choose-session
 
 # Copy to OSX clipboard
-bind-key y run-shell "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind-key y run-shell "tmux save-buffer - | xclip -i"
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
