Add some nvim changes

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,6 +9,7 @@ bind-key L last-window
 set -g base-index 1
 
 set-option -g default-command "zsh"
+set -g default-terminal "screen-256color"
 
 # Make mouse useful in copy mode
 setw -g mode-mouse on
