--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -63,14 +63,15 @@ bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
-bind M-h swap-window -t -1
-bind M-l swap-window -t +1
+bind H swap-window -t -1
+bind L swap-window -t +1
 bind r source-file ~/.tmux.conf
+bind S new
+bind s choose-session
 bind M-k send-keys C-l \; run-shell "sleep .3s" \; clear-history
 
 bind v split-window -h
-bind s split-window -v 
-bind S choose-session
+bind h split-window -v 
 
 # Copy to OSX clipboard
 bind-key y run-shell "tmux save-buffer - | xclip -i"
