--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -54,7 +54,7 @@ set-window-option -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "xclip -i"
+bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
 #
 
  # move between panes
@@ -74,5 +74,4 @@ bind v split-window -h
 bind h split-window -v 
 
 # Copy to OSX clipboard
-bind-key y run-shell "tmux save-buffer - | xclip -i"
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
