Some general changes. Add a few vim keybindings, add a few shell aliases, try to fix the fact that ctrl-d kills the shell..., make tmux open new split window with current path.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -2,7 +2,8 @@
 # Do it just like this or you will not 
 # be able to use type backtick literally
 unbind C-b
-set -g prefix `
+unbind C-d
+set-option -g prefix `
 bind ` send-prefix
 bind-key L last-window
 
@@ -70,8 +71,8 @@ bind S new
 bind s choose-session
 bind M-k send-keys C-l \; run-shell "sleep .3s" \; clear-history
 
-bind v split-window -h
-bind h split-window -v 
+bind v split-window -h -c '#{pane_current_path}'
+bind h split-window -v -c '#{pane_current_path}'
 
 # Copy to OSX clipboard
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
