Add some fixes for tmux and add update vim config

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -13,12 +13,8 @@ set-option -g default-command "zsh"
 set -g default-terminal "screen-256color"
 
 # Make mouse useful in copy mode
-setw -g mode-mouse on
-#
-# Allow mouse to select which pane to use
-set -g mouse-select-pane on
-#
-#
+setw -g mouse on
+
 # # Scroll History
 set -g history-limit 30000
 #
@@ -76,3 +72,4 @@ bind h split-window -v -c '#{pane_current_path}'
 
 # Copy to OSX clipboard
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
+set -g default-command "reattach-to-user-namespace -l /bin/zsh"
