Added some changes.

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -50,8 +50,8 @@ set-option -g status-keys vi
 set-window-option -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "xclip -sel clip -i"
 #
 
  # move between panes
@@ -71,5 +71,7 @@ bind v split-window -h -c '#{pane_current_path}'
 bind h split-window -v -c '#{pane_current_path}'
 
 # Copy to OSX clipboard
-if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
