--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -26,8 +26,8 @@ set -s escape-time 0
 
 # Set status bar
 set -g status-justify left
-set -g status-bg black
-set -g status-fg white
+# set -g status-bg black
+# set -g status-fg white
 set-option -g status-interval 5
 set -g status-right-length 150
 set -g status-left ""
@@ -43,7 +43,7 @@ setw -g aggressive-resize on
 bind-key a send-prefix
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-style bg=red
 
 # Turn on vi bindings in copy mode
 set-option -g status-keys vi
@@ -75,3 +75,24 @@ bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'dracula/tmux'
+
+set -g @dracula-plugins "battery ram-usage"
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon session
+set -g @dracula-show-flags true
+set -g @dracula-show-timezone false
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
