Update neovim config

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -32,6 +32,7 @@ set-option -g status-interval 5
 set -g status-right-length 150
 set -g status-left ""
 set -g status-right "#[fg=green] %m-%d-%Y %H:%M"
+set-option -g status-position top
 
 # Rather than constraining window size to the maximum size of any client 
 # connected to the *session*, constrain window size to the maximum size of any 
@@ -87,6 +88,20 @@ set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
 set -g @dracula-show-flags true
 set -g @dracula-show-timezone false
+
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
+set -g detach-on-destroy off  # don't exit from tmux when closing a session
+
+bind-key "t" run-shell "sesh connect $(
+	sesh list -tz | fzf-tmux -p 55%,60% \
+		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
+		--header '  ^a all ^t tmux ^x zoxide ^f find' \
+		--bind 'tab:down,btab:up' \
+		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
+		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
+		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
+		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)'
+)"
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
